[project]
name = "ssh-wrapper"
version = "0.1.0"
description = ""
authors = [{ name = "l02", email = "l8556@outlook.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paramiko>=5,<6.0.0",
    "rich>=15,<16",
    "cryptography>=48.0.0,<49.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
